[package]
name = "rustml2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.39"
itertools = "0.11.0"
ndarray = {version = "0.15.6",features=["rayon"]}
ndarray-rand = "0.14.0"
rayon = "1.7.0"
serde = {version="1.0.186" , features= ["derive"]}
serde_json = "1.0.105"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = false
